<resources>
    <string name="app_name" translatable="false">Workmeet</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="post_text">Post Text</string>
    <string name="post_attachment">Post Attachment</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_remove">Remove</string>
    <string name="description_post_likes">Who liked the post</string>
    <string name="description_owners_likes">Who liked the post</string>
    <string name="speakers">Speakers</string>
    <string name="participants">Participants</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">Sign out</string>
    <string name="cancel">Not now</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm password</string>
    <string name="signed_out">You have signed out</string>
    <string name="want_to_sign_in">I want to sign in</string>
    <string name="want_to_sign_out">Confirm signing out</string>
    <string name="warn_out">Only authorized users can post and like.</string>
    <string name="not_confirmed">Passwords do not match!</string>
    <string name="avatar">Click here to upload your avatar</string>
    <string name="add_post">new post</string>
    <string name="retry_loading">Retry</string>
    <string name="message">Write a message</string>
    <string name="my_messages">My messages</string>
    <string name="invite">Invite to event</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="save">Save</string>
    <string name="default_job">job is not defined</string>
    <string name="finish">now</string>
    <string name="no_link">no link to company site</string>
    <string name="like_owner_avatar">Like owner avatar</string>
    <string name="post_feed">posts</string>
    <string name="event_feed">events</string>
    <string name="my_page">my page</string>
    <string name="jobs">jobs</string>
    <string name="add_event">new event</string>
    <string name="add_job">new job</string>
    <string name="description_photo">It is a photo</string>
    <string name="remove">Remove</string>
    <string name="to_jobs">jobs</string>
    <string name="to_posts">posts</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="description_select_photo">Select photo please</string>
    <string name="description_take_photo">Take photo please</string>
    <string name="description_add_video">Add video</string>
    <string name="description_add_audio">Add audio</string>
    <string name="description_mention">Mention a user</string>
    <string name="description_play_button">Play</string>
    <string name="tell_about_new_event_here">Tell about a new event here</string>
    <string name="description_pause_button">Pause</string>
    <string name="user_page">user page</string>
    <string name="now">now</string>
    <string name="range" translatable="false">%1$s\n%2$s</string>
    <string name="select_interval">Select\ndates</string>
    <string name="select_dates">Select dates</string>
    <string name="interv">-</string>
    <string name="description_job_menu">job menu</string>
    <string name="hint_for_filling">if current job choose\nstart date twice</string>
    <string name="select_type">Select type of event</string>
    <string name="select_datetime">Select date and time</string>
    <string name="offline">OFFLINE</string>
    <string name="online">ONLINE</string>
    <string name="pick">Pick</string>
    <string name="description_pick_user">Pick user</string>
</resources>