<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_light_primary"
    tools:context=".ui.NewPostFragment">

        <LinearLayout
            android:id="@+id/authWindow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/md_theme_light_secondaryContainer"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintBottom_toBottomOf="parent"
            >

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:contentDescription="@string/avatar"
                tools:srcCompat="@drawable/avatar3" />

            <Button
                android:id="@+id/uploadAvatar"
                style="@style/Widget.AppTheme.Menu.Button"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/avatar"
                android:textColor="@color/md_theme_light_primary" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_large"
                    android:hint="@string/username"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_large"
                    android:hint="@string/login" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:hint="@string/password"
                    android:textSize="@dimen/text_size_large"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:hint="@string/confirm_password"
                    android:textSize="@dimen/text_size_large"
                    android:inputType="textPassword" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/up"
                android:layout_width="@dimen/icon_button_large_size"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/min_spacing"
                android:layout_marginRight="@dimen/min_spacing"
                android:contentDescription="@string/sign_up"
                android:text="@string/sign_up"
                android:textSize="@dimen/text_size_large"
                android:textAllCaps="true"/>
        </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>