<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.NewPostFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit"
                android:hint="@string/tell_about_new_event_here"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="textMultiLine"
                android:padding="@dimen/common_spacing" />

            <FrameLayout
                android:id="@+id/photoContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/description_photo" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/removePhoto"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:text="@string/remove"
                    android:textAllCaps="true"
                    android:textSize="@dimen/text_size_large"/>
            </FrameLayout>
        </LinearLayout>
    </ScrollView>
    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:background="@color/md_theme_light_secondary"
        app:layout_constraintBottom_toTopOf="@id/buttonPanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/buttonPanel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/margin_fab"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/pickPhoto"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_select_photo"
            android:padding="@dimen/common_spacing"
            app:icon="@drawable/baseline_photo_24"
            app:iconSize="@dimen/icon_button_min_size"
            app:iconGravity="end|start"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/takePhoto"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_take_photo"

            app:icon="@drawable/baseline_camera_alt_24"
            app:iconSize="@dimen/icon_button_min_size"
            app:iconGravity="end|start"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addVideo"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_add_video"

            app:icon="@drawable/baseline_video_file_24"
            app:iconSize="@dimen/icon_button_min_size"
            app:iconGravity="end|start"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addAudio"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_add_audio"
            app:icon="@drawable/baseline_audio_file_24"
            app:iconSize="@dimen/icon_button_min_size"
            app:iconGravity="end|start"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addMentioned"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_mention"
            app:icon="@drawable/baseline_person_add_alt_1_24"
            app:iconSize="@dimen/icon_button_min_size"
            app:iconGravity="end|start"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>