<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/posts_avatar_size"
            android:layout_height="@dimen/posts_avatar_size"
            android:layout_margin="@dimen/common_spacing"
            android:contentDescription="@string/description_post_author_avatar"
            app:layout_constraintBottom_toBottomOf="@id/barrierTop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@sample/posts.json/data/authorAvatar" />
        <TextView
            android:id="@+id/author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_spacing"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintBottom_toTopOf="@id/authorJob"
            app:layout_constraintEnd_toStartOf="@id/message"
            app:layout_constraintStart_toEndOf="@id/avatar"
            app:layout_constraintTop_toTopOf="@id/avatar"
            tools:text="@sample/posts.json/data/author" />

        <TextView
            android:id="@+id/authorJob"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_spacing"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintBottom_toTopOf="@id/company"
            app:layout_constraintEnd_toStartOf="@id/message"
            app:layout_constraintStart_toEndOf="@id/avatar"
            app:layout_constraintTop_toBottomOf="@id/author"
            tools:text="@sample/posts.json/data/authorJob" />

        <TextView
            android:id="@+id/company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/min_spacing"
            app:layout_constraintBottom_toBottomOf="@id/avatar"
            app:layout_constraintStart_toEndOf="@id/avatar"
            app:layout_constraintTop_toBottomOf="@id/authorJob"
            tools:text="@sample/jobs.json/data/name" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/message"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="@dimen/icon_button_medium_size"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/min_spacing"
            android:contentDescription="@string/description_post_menu"
            android:text="@string/message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/myMessages"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="@dimen/icon_button_medium_size"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/min_spacing"
            android:contentDescription="@string/description_post_menu"
            android:text="@string/my_messages"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/invite"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="@dimen/icon_button_medium_size"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/min_spacing"
            android:contentDescription="@string/description_post_menu"
            android:text="@string/invite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="message"
            app:layout_constraintBottom_toTopOf="@id/barrierTop"/>


        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrierTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="avatar, company, invite"
            app:layout_constraintBottom_toTopOf="@id/list" />

        <TextView
            android:id="@+id/emptyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_posts"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/barrierTop"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/user_card_post" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"
        android:contentDescription="@string/add_post"
        android:focusable="true"
        app:srcCompat="@drawable/sharp_add_24" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>
