<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/common_spacing">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/posts_avatar_size"
            android:layout_height="@dimen/posts_avatar_size"
            android:layout_margin="@dimen/common_spacing"
            android:contentDescription="@string/description_post_author_avatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@sample/posts.json/data/authorAvatar" />

        <TextView
            android:id="@+id/author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_spacing"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintBottom_toTopOf="@id/authorJob"
            app:layout_constraintStart_toEndOf="@id/avatar"
            app:layout_constraintTop_toTopOf="@id/avatar"
            tools:text="@sample/posts.json/data/author" />

        <TextView
            android:id="@+id/authorJob"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_spacing"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintStart_toEndOf="@id/avatar"
            app:layout_constraintTop_toBottomOf="@id/author"
            tools:text="@sample/posts.json/data/authorJob" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/pick"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="@dimen/icon_button_size"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/min_spacing"
            android:contentDescription="@string/description_pick_user"
            android:text="@string/pick"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>